remove word-wrap:normal to prevent horizontal scroll

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -75,9 +75,9 @@ pre.trace {
   color:#fff;
   font-family: 'Menlo', 'Liberation Mono', 'Consolas', 'Courier New', 'andale mono','lucida console',monospace;
   white-space: pre;
-  word-wrap: normal;
   overflow: auto;
   overflow-y: hidden;
+  font-size: 12px;
 }
 
 .autoscroll-container {
